[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Math Stage/MathQuestion.gd" type="Script" id=1]
[ext_resource path="res://Font/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SFX/Correct 2.mp3" type="AudioStream" id=3]
[ext_resource path="res://SFX/Incorrect.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="MathQuestion" type="Control"]
rect_pivot_offset = Vector2( 778, 306 )
script = ExtResource( 1 )

[node name="Num1" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 55.0
margin_top = 36.0
margin_right = 169.0
margin_bottom = 154.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "00"
align = 1

[node name="Symbol" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 169.0
margin_top = 37.0
margin_right = 282.0
margin_bottom = 132.0
rect_rotation = 0.55862
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "+"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Num2" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 268.0
margin_top = 37.0
margin_right = 388.0
margin_bottom = 141.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "00"
align = 1

[node name="EqualsSymb" type="Label" parent="."]
margin_left = 388.0
margin_top = 36.0
margin_right = 496.0
margin_bottom = 131.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "="
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="AnswerNum" type="Label" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 496.0
margin_top = 36.0
margin_right = 663.0
margin_bottom = 152.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "00"
align = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, 0 )

[node name="answerTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="CorrectSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 3 )

[node name="WrongSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 4 )

[connection signal="timeout" from="answerTimer" to="." method="_on_answerTimer_timeout"]
